# spscml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: multi-user-deploy.yaml  tanh_sheath.yaml  vlasov_sheath.yaml  wdm.yaml
scripts/: optimization.py  plasma_norm_test.py  profile_dlr.py  profile_fulltensor.py  run_optimization.py  run_optimization_wdm.py  run_vlasov_tesseract.sh  run_wdm.py  run_wdm_with_urls.py  run_wdm_without_tesseract.py  sheath_dlr_vlasov.py  sheath_fulltensor_vlasov.py  weak_landau_damping.py
src/spscml/: collisions_and_sources.py  fusion.py  grids.py  muscl.py  normalization.py  plasma.py  poisson.py  rk.py  sheath_interface.py  utils.py
src/spscml/fulltensor_vlasov/: sheath_model.py  solver.py
src/spscml/straightforward_dlra/: poisson.py  solver.py
src/spscml/whole_device_model/: local_wrapper.py  solver.py  wrapper.py
tesseracts/: container_management.py
tesseracts/sheaths/example_inputs/: abstract_eval.json  apply.json  vjp.json
tesseracts/sheaths/tanh_sheath/: tesseract_api.py  tesseract_config.yaml  tesseract_config_gpu.yaml  tesseract_requirements.txt  tesseract_requirements_gpu.txt
tesseracts/sheaths/vlasov/: tesseract_api.py  tesseract_config.yaml  tesseract_config_gpu.yaml  tesseract_requirements.txt  tesseract_requirements_gpu.txt
tesseracts/wdm/: tesseract_api.py  tesseract_config.yaml  tesseract_config_gpu.yaml  tesseract_requirements.txt  tesseract_requirements_gpu.txt
writeup/: hackathon.tex  references.bib
