[project]
name = "spscml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffrax>=0.7.0",
    "equinox>=0.12.2",
    "jax>=0.6.0",
    "jpu>=0.0.5",
    "lineax",
    "mlflow>=2.22.1",
    "tesseract-core>=0.9.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "tesseract-core[runtime]>=0.9.0",
    "tesseract-jax>=0.2.1",
]

[tool.uv.sources]
lineax = { git = "https://github.com/jpbrodrick89/lineax.git", rev = "jpb/novmap" }
